# Draw-

./: .gitignore  CMakeLists.txt  README.md
CatsHair/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
CrystalGain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
CrystalGainPro/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
DrawEQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Shared/: GainProcessor.h  MonoProcessor.h  PhaseProcessor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/CrystalGain/: PluginEditor.h  PluginProcessor.h
Source/CrystalGainPro/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AnalogCharacter.cpp  AnalogCharacter.h  BandCompressor.h  DynamicsCompressor.h  Equalizer.cpp  Equalizer.h  FFTAnalyzer.cpp  FFTAnalyzer.h  GainEnvelope.h  PitchDetector.cpp  PitchDetector.h  PitchFollowEngine.cpp  PitchFollowEngine.h  PowerBand.h  WDFCircuits.h  WDFCore.h
Source/DrawEQSimple/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Shared/: BalanceProcessor.h
Source/UI/: EQGraphComponent.cpp  EQGraphComponent.h  EnvelopeEditorComponent.cpp  EnvelopeEditorComponent.h  LevelMeterComponent.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
